k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracker-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracker-app
  template:
    metadata:
      labels:
        app: tracker-app
    spec:
      containers:
        - name: tracker-app-container
          image: namespaxe/task:2.3
          resources:
            requests:
              memory: "280Mi"
              cpu: "90m"
            limits:
              memory: "290Mi"
              cpu: "99m"
