k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracker-app-service
spec:
  selector:
    app: tracker-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
  sessionAffinity: ClientIP
