k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-app-ingress
  namespace: defaul
  annotations:
    cert-manager.io/cluster-issuer: "namespaxe"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/real-ip-header: "X-Forwarded-For"
    nginx.ingress.kubernetes.io/remote-addr-header: "X-Forwarded-For"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - task-tracker.ns.namespaxe.io
      secretName: task-tracker-tls

  rules:
    - host: task-tracker.ns.namespaxe.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tracker-app-service
                port:
                  number: 80
